# impossibru

./: README.md  my-character.yaml  pyproject.toml  skel3d.py
.github/workflows/: deploy  pages.yml
examples/: humanoid.yaml  test_orc.yaml
scripts/: sync_web.py
spritebuilder/: __init__.py  animation.py  cli.py  document.py  editor_server.py  exporter.py  project.py  render.py  rigging.py
spritebuilder/editor_static/: app.js  index.html  style.css
tests/: test_editor.py  test_rigging.py  test_spritebuilder.py
web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/src/: app.ts  engine.test.ts  engine.ts  runtime.ts  style.css  types.ts
web/tests/: editor.spec.ts
